crates/oxc_react_compiler/tests/snapshots/error.repro-preserve-memoization-inner-destructured-value-mistaken-as-dependency-later-mutation.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.repro-preserve-memoization-inner-destructured-value-mistaken-as-dependency-later-mutation.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] PreserveManualMemo: Existing memoization could not be preserved", labels: [LabeledSpan { label: Some("Could not preserve existing memoization"), span: SourceSpan { offset: 823, length: 93 }, primary: false }], help: Some("React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. This value was memoized in source but not in compilation output"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
