crates/oxc_react_compiler/tests/snapshots/error.repro-preserve-memoization-inner-destructured-value-mistaken-as-dependency-mutated-dep.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.repro-preserve-memoization-inner-destructured-value-mistaken-as-dependency-mutated-dep.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] PreserveManualMemo: Existing memoization could not be preserved", labels: [LabeledSpan { label: Some("This dependency may be modified later"), span: SourceSpan { offset: 977, length: 1 }, primary: false }], help: Some("React Compiler has skipped optimizing this component because the existing manual memoization could not be preserved. This dependency may be mutated later, which could cause the value to change unexpectedly"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
