crates/oxc_react_compiler/tests/snapshots/error.todo-for-in-loop-with-context-variable-iterator.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-for-in-loop-with-context-variable-iterator.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: Support non-trivial for..in inits", labels: [LabeledSpan { label: None, span: SourceSpan { offset: 259, length: 208 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
