crates/oxc_react_compiler/tests/snapshots/error.todo-for-loop-with-context-variable-iterator.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-for-loop-with-context-variable-iterator.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: This value cannot be modified", labels: [LabeledSpan { label: Some("`i` cannot be modified"), span: Span { start: 726, end: 727 }, primary: false }], help: Some("Modifying a value used previously in JSX is not allowed. Consider moving the modification before the JSX"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
