crates/oxc_react_compiler/tests/snapshots/error.todo-for-of-loop-with-context-variable-iterator.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-for-of-loop-with-context-variable-iterator.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Todo: Support non-trivial for..of inits", labels: [LabeledSpan { label: None, span: Span { start: 259, end: 471 }, primary: false }], help: None, note: None, severity: Warning, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
