crates/oxc_react_compiler/tests/snapshots/error.todo-function-expression-references-later-variable-declaration.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.todo-function-expression-references-later-variable-declaration.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot reassign variable after render completes", labels: [LabeledSpan { label: Some("Cannot reassign `onClick` after render completes"), span: Span { start: 52, end: 59 }, primary: false }], help: Some("Reassigning `onClick` after render has completed can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }
OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Immutability: Cannot modify local variables after render completes", labels: [LabeledSpan { label: Some("This function may (indirectly) reassign or modify `onClick` after render"), span: Span { start: 116, end: 124 }, primary: false }, LabeledSpan { label: Some("This modifies `onClick`"), span: Span { start: 52, end: 59 }, primary: false }], help: Some("This argument is a function which may reassign or mutate `onClick` after render, which can cause inconsistent behavior on subsequent renders. Consider using state instead"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
